--- a/public/pages/sida6.html
+++ b/public/pages/sida6.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <title>Sida 6</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <nav>
-        <ul>
-            <li><a href="sida1.php">Sida 1</a></li>
-            <li><a href="sida2.php">Sida 2</a></li>
-            <li><a href="sida3.php">Sida 3</a></li>
-            <li><a href="sida4.php">Sida 4</a></li>
-            <li><a href="sida5.php">Sida 5</a></li>
-            <li><a href="sida6.html">Sida 6</a></li>
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <p style="padding:5px; border-radius: 25px;
+            background-color: #a7c0fa;
+            color: black;
+            border: 2px solid #fff;">
+                ☰
+            </p>
+        </div>
+        <ul class="nav-links">
+            <li><a class="nav-btn" href="sida1.php">Sida 1</a></li>
+            <li><a class="nav-btn" href="sida2.php">Sida 2</a></li>
+            <li><a class="nav-btn" href="sida3.php">Sida 3</a></li>
+            <li><a class="nav-btn" href="sida4.php">Sida 4</a></li>
+            <li><a class="nav-btn" href="sida5.php">Sida 5</a></li>
+            <li><a class="nav-btn" href="sida6.php">Sida 6</a></li>
         </ul>
     </nav>
-    <h1>Välkommen till Sida 6</h1>
-    <p>Denna sida är statisk HTML och visar enkel styling och layout.</p>
+
+
+    <div class="main-content">
+
+        <h1>Välkommen till Sida 6</h1>
+        <p>Denna sida är statisk HTML och visar enkel styling och layout.</p>
+    </div>
+
+    <script src="../../includes/script.js"></script>
+
     <footer style="text-align: center; margin-top: 20px;">
-        Luleå tekniska universitet | Webbutveckling II - Skriptspråk och databaser | <b>hihassan1998</b> | <?php echo date("Y"); ?>
+        Luleå tekniska universitet | Webbutveckling II - Skriptspråk och databaser | <b>hihassan1998</b> | 2025
     </footer>
+
+
 </body>
+
 </html>
